alignment controller call fixes; ng-file-upload

--- a/frontend/www/css/style.css
+++ b/frontend/www/css/style.css
@@ -700,7 +700,7 @@ select {
 }
 
 select.large {
-    font-size: 3.4vmin;
+    font-size: 1.4em;
     background: #CCC;
 }
 
